--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>intern-api</groupId>
-    <artifactId>api</artifactId>
+    <version>1.0</version>
+    <artifactId>apiintern</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <build>
         <plugins>
